   systems.  (bug supplied by Stephen Cheeseman, Geosoft). 

 - Added mitab_c_load_coordsys_table() to C API (bug 469)

 - mitab_ogr_datasource.cpp: Don't report single layer that hasn't been
   "created" yet via GetLayerCount().  Fixes up single file generation issues.

 - mitab_tabfile.cpp: Several fixes for TABFile::Open() when loading the
   tabfile fails. (provided by Stephen Cheesman). 


Version 1.2.4 (2003-07-23)
--------------------------

 - Added 'indexed' and 'unique' parameters to mitab_c_add_field().
   Applications written for older versions of the C API will have to 
   be updated to pass these two new parameters.

 - Ensure that a blank line in a mid file is treated as one field containing
   an empty string instead of being zero fields.  NFW

 - Fixes to support mif/mid files produced by Geomedia V5 (bug 1631):
    - Do not produce an error if .mid data records end with a stray ','
    - Treat tabs (\t) as a blank space delimiter when reading coordinate 
      values in .mif file

 - Fixed sign of rotation parameters in TOWGS84 parameters in WKT.  MapInfo
   uses EPSG 9607's 7 parameter datum shift method, but TOWGS84 is defined
   to hold EPSG 9606 style parameters.  Only the rotational signs differ. NFW

 - Fixed spelling of Provisional_South_American_Datum_1956 in datum list. NFW

 - Fixed bug parsing ellipsoid out of CoordSys strings for coordinate
   systems with datum 999 or 9999. NFW

 - Fixed leak of TABMAPObjHdr when writing NONE geometries in SetFeature().

 - Increased MIF reader line buffer size to 10000 chars

 - Added support for writing TABFC_NoGeom (NONE) geometries via the C API.

 - Fixed crash when reading .mif file that doesn't contain a DATA line
   (Thanks to Riccardo Cohen for the fix).

 - Implement DeleteDataSource() method on the driver object. NFW

 - mitab_spatialref.cpp, mitab_coodsys.cpp: Fixed up regional mercator logic.
   It was screwing up transverse mercator with non-zero latitude when writing