@@ -59,6 +59,9 @@ Version 1.3.0 (2004-07-07)
  - mitab_tabfile.cpp: Several fixes for TABFile::Open() when loading the
    tabfile fails. (provided by Stephen Cheesman). 
 
+ - mitab_mapfile.cpp: Fixed error return value in LoadNextMatchingObjectBlock()
+   per http://bugzilla.remotesensing.org/show_bug.cgi?id=615. NFW
+
 
 Version 1.2.4 (2003-07-23)
 --------------------------
@@ -584,5 +587,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.124 2004-09-17 19:27:33 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.125 2004-09-22 13:07:58 fwarmerdam Exp $
 ------------
